[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-time-trust"
version = "0.1.0"
description = "Publishable TRUST pipeline with MILP and surrogate MLP."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Time-Trust Authors" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "tensorflow>=2.14",
  "gamspy>=1.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
